fixed clipping and menu moved more to the right

--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ html {
         height: 0px;
         opacity: 0;
     }
-    .show1 {
+    .vis {
         width: 200px;
         height: 400px;
     }
@@ -569,7 +569,7 @@ html {
         background: none;
         border: 0px solid black;
         position: relative;
-        left: 100px;
+        left: 130px;
     }
     .menubutton:hover {
         cursor: pointer;
@@ -582,7 +582,7 @@ html {
         width: 150px;    
         height: 400px;
         position: absolute;
-        margin-right: 40px;
+        margin-left: 30px;
         background-color: rgb(130, 130, 130);
         display: flex;
         flex-direction: column;
@@ -615,11 +615,11 @@ html {
     .hidden2 {
         opacity: 0;
     }
-    .show1 {
+    .vis {
         opacity: 1;
     }
 
-    .show1 img {    
+    .vis img {    
         width: 60px;
         height: 60px;
         margin-right: 20px;
@@ -752,7 +752,7 @@ html {
         height: 0px;
         opacity: 0;
     }
-    .show1 {
+    .vis {
         width: 200px;
         height: 400px;
     }
@@ -809,11 +809,11 @@ html {
     .hidden2 {
         opacity: 0;
     }
-    .show1 {
+    .vis {
         opacity: 1;
     }
 
-    .show1 img {    
+    .vis img {    
         width: 60px;
         height: 60px;
         margin-right: 20px;
@@ -991,6 +991,7 @@ html {
 .hidden {
     opacity: 0;
     transition: all 1s;
+    z-index: 0;
 }
 .show {
     opacity: 1;
